--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@chakra-ui/react": "^2.2.8",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@swc-node/core": "^1.9.1",
+    "@swc/helpers": "^0.4.14",
     "firebase": "^9.14.0",
     "framer-motion": "^7.2.0",
     "next": "^12.3.4",
