--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.10.5",
     "@swc-node/core": "^1.9.1",
     "@swc/helpers": "^0.4.14",
+    "dotenv": "^16.0.3",
     "firebase": "^9.14.0",
     "framer-motion": "^8.4.0",
     "next": "^13.1.1",
